# logger

./: CMakeLists.txt  main.cpp  writer.cpp
include/: logger.h  writer.h
